[Style] Address review nits: java.util.List.of() and package-private @Test methods
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Signed-off-by: Joob1n <1208247864@qq.com>